Fix height of featured image on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -38,7 +38,7 @@ img {
 }
 
 .uk-cover-background {
-  height: 320px;
+  max-height: 320px;
   margin: 1em 0em;
   overflow: hidden;
   object-position: center;
